--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Air Tennis</string>
+    <string name="banner_ad_unit_id">ca-app-pub-2491278468726521/6190308697</string>
 </resources>
